force-app/main/default/objects/Endereco_ViaCEP__c/Endereco_ViaCEP__c.object-meta.xml
<CustomObject>
    <label>Endereço ViaCEP</label>
    <pluralLabel>Endereços ViaCEP</pluralLabel>
    <nameField>
        <label>Nome do Endereço</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>