force-app/main/default/objects/Endereco_ViaCEP__c/fields/IBGE__c.field-meta.xml
<CustomField>
    <fullName>IBGE__c</fullName>
    <label>IBGE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>