force-app/main/default/objects/Endereco_ViaCEP__c/fields/Localidade__c.field-meta.xml
<CustomField>
    <fullName>Localidade__c</fullName>
    <label>Localidade (Cidade)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>