force-app/main/default/objects/Endereco_ViaCEP__c/fields/Logradouro__c.field-meta.xml
<CustomField>
    <fullName>Logradouro__c</fullName>
    <label>Logradouro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>