force-app/main/default/objects/Endereco_ViaCEP__c/fields/UF__c.field-meta.xml
<CustomField>
    <fullName>UF__c</fullName>
    <label>UF (Estado)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>